nats-micro/tests/ui/consumer_invalid_config.stderr
error[E0308]: mismatched types
  --> tests/ui/consumer_invalid_config.rs:11:18
   |
 6 | #[service_handlers]
   | ------------------- expected due to this
...
11 |         config = 123
   |                  ^^^ expected `ConsumerConfig`, found integer
